--- a/dev/less/_diferenciais-pousada.less
+++ b/dev/less/_diferenciais-pousada.less
@@ -66,32 +66,34 @@
 				&:first-child {
 					margin-top: 0;
 				}
-				> .icone {
-					margin-right: 5px;
+				> a {
+					> .icone {
+						margin-right: 5px;
 
-					&.sinuca {
-						.icon(@icon-sinuca);
-					}
-					&.coracao {
-						.icon(@icon-coracao);
-					}
-					&.churrasqueira {
-						.icon(@icon-churrasqueira);
-					}
-					&.carro {
-						.icon(@icon-car);
-					}
-					&.massagem {
-						.icon(@icon-massagem);
-					}
-					&.vintage {
-						.icon(@icon-vintage);
-					}
-					&.oriental {
-						.icon(@icon-oriental);
-					}
-					&.hidro {
-						.icon(@icon-water);
+						&.sinuca {
+							.icon(@icon-sinuca);
+						}
+						&.coracao {
+							.icon(@icon-coracao);
+						}
+						&.churrasqueira {
+							.icon(@icon-churrasqueira);
+						}
+						&.carro {
+							.icon(@icon-car);
+						}
+						&.massagem {
+							.icon(@icon-massagem);
+						}
+						&.vintage {
+							.icon(@icon-vintage);
+						}
+						&.oriental {
+							.icon(@icon-oriental);
+						}
+						&.hidro {
+							.icon(@icon-water);
+						}
 					}
 				}
 			}
