--- a/dev/less/_facilidades-pousada.less
+++ b/dev/less/_facilidades-pousada.less
@@ -135,3 +135,38 @@
 		}
 	}
 }
+// plugin
+#higiene,
+#seguranca,
+#permanencia,
+#agua,
+#wifi,
+#tv,
+#ar,
+#seducao {
+	text-align: center;
+
+	h2 {
+		font-size: 18px;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		padding-bottom: 10px;
+
+		.mobile({
+			font-size: 20px;
+			margin: 0 20px 20px 20px;
+			padding-bottom: 20px;
+		});
+		.tablet({
+			font-size: 22px;
+			border-style: none;
+			padding-bottom: 0;
+		});
+		.desktop({
+			font-size: 24px;
+		});
+		.huge({
+			font-size: 26px;
+		});
+	}
+}
