--- a/dev/less/_nossos-contatos.less
+++ b/dev/less/_nossos-contatos.less
@@ -121,6 +121,20 @@
 					}
 				}
 			}
+			> a {
+				line-height: 120%;
+				font-size: 14px;
+
+				.mobile({
+					font-size: 16px;
+				});
+				.tablet({
+					font-size: 9px;
+				});
+				.desktop({
+					font-size: 10px;
+				});
+			}
 			> ul {
 				> li {
 					a {
