--- a/dev/less/_menu-principal.less
+++ b/dev/less/_menu-principal.less
@@ -135,12 +135,12 @@
 				a {
 					.clearfix;
 					display: block;
-					height: 40px;
 					color: #fff;
-					font-size: 18px;
+					font-size: 16px;
 					text-transform: uppercase;
 					text-decoration: none;
 					text-align: center;
+					padding: 15px 0;
 
 					&.ativo {
 						color: @cor-logo;
@@ -156,9 +156,6 @@
 					});
 					.desktop({
 						font-size: 16px;
-					});
-					.huge({
-						font-size: 18px;
 					});
 
 					> .icone {
