--- a/dev/less/_estrutura.less
+++ b/dev/less/_estrutura.less
@@ -4,7 +4,9 @@ body {
 	height: 100%;
 	background-color: @cor-principal;
 	color: #fff;
-	font-family: Verdana, Geneva, sans-serif;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-size: 16px;
+	font-weight: 300;
 }
 strong {
 	font-weight: bold;
