--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -3103,15 +3103,42 @@ input:focus {
   clear: both;
 }
 .suites-pousada ul li {
-  border-top: 2px solid #fff;
+  border-top: 20px solid #fff;
 }
 .suites-pousada ul li:first-child {
+  border-top-width: 2px;
   border-top-color: #1a1a1a;
+}
+.suites-pousada ul li > .titulo {
+  display: block;
+  font-size: 16px;
+  letter-spacing: 1px;
+  /*border-bottom: 1px solid rgba(255, 255, 255, .2);*/
+  margin: 10px 0;
+  text-transform: uppercase;
+  text-align: center;
+}
+@media (min-width: 48em) {
+  .suites-pousada ul li > .titulo {
+    font-size: 18px;
+    margin: 20px 0;
+  }
+}
+@media (min-width: 62em) {
+  .suites-pousada ul li > .titulo {
+    font-size: 20px;
+  }
+}
+@media (min-width: 75em) {
+  .suites-pousada ul li > .titulo {
+    font-size: 22px;
+    margin: 40px 0;
+  }
 }
 .suites-pousada ul li > .imagem {
   display: block;
   width: 100%;
-  height: 150px;
+  height: 250px;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -3186,18 +3213,17 @@ input:focus {
 }
 @media (min-width: 48em) {
   .suites-pousada ul li > .imagem {
-    height: 250px;
+    height: 350px;
   }
 }
 @media (min-width: 62em) {
   .suites-pousada ul li > .imagem {
-    height: 350px;
-    background-attachment: fixed;
+    height: 450px;
   }
 }
 @media (min-width: 75em) {
   .suites-pousada ul li > .imagem {
-    height: 450px;
+    height: 550px;
   }
 }
 .suites-pousada ul li > .imagem.brilhante {
@@ -3291,59 +3317,15 @@ input:focus {
   padding: 20px;
   text-align: center;
 }
-@media (min-width: 48em) {
+@media (min-width: 75em) {
   .suites-pousada ul li > .informacoes {
     padding: 40px;
   }
 }
-.suites-pousada ul li > .informacoes > .titulo {
-  display: block;
-  font-size: 16px;
-  letter-spacing: 1px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  padding-bottom: 10px;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-}
-@media (min-width: 48em) {
-  .suites-pousada ul li > .informacoes > .titulo {
-    font-size: 18px;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 62em) {
-  .suites-pousada ul li > .informacoes > .titulo {
-    font-size: 20px;
-  }
-}
-@media (min-width: 75em) {
-  .suites-pousada ul li > .informacoes > .titulo {
-    font-size: 22px;
-    padding-bottom: 40px;
-    margin-bottom: 40px;
-  }
-}
 .suites-pousada ul li > .informacoes > .descricao {
   margin-bottom: 20px;
-  font-size: 10px;
   line-height: 150%;
   text-align: center;
-}
-@media (min-width: 48em) {
-  .suites-pousada ul li > .informacoes > .descricao {
-    font-size: 12px;
-  }
-}
-@media (min-width: 62em) {
-  .suites-pousada ul li > .informacoes > .descricao {
-    font-size: 14px;
-  }
-}
-@media (min-width: 75em) {
-  .suites-pousada ul li > .informacoes > .descricao {
-    font-size: 16px;
-  }
 }
 .suites-pousada ul li > .informacoes > .descricao > span {
   margin-right: 10px;
