--- a/dev/less/_menu-principal.less
+++ b/dev/less/_menu-principal.less
@@ -178,6 +178,9 @@
 						&.sobre {
 							.icon(@icon-coracao);
 						}
+						&.cardapio {
+							.icon(@icon-comida);
+						}
 						&.localizacao {
 							.icon(@icon-map);
 						}
