--- a/dev/less/_icons.less
+++ b/dev/less/_icons.less
@@ -2,15 +2,20 @@
 
 @font-face {
     font-family: 'pousada-icons';
-    src: url('./../../assets/icons/pousada.eot?bhxvte');
-    src: url('./../../assets/icons/pousada.eot?bhxvte#iefix') format('embedded-opentype'),
-         url('./../../assets/icons/pousada.ttf?bhxvte') format('truetype'),
-         url('./../../assets/icons/pousada.woff?bhxvte') format('woff'),
-         url('./../../assets/icons/pousada.svg?bhxvte#remoto-icons') format('svg');
+    src: url('./../../assets/icons/pousada.eot?uezvug');
+    src: url('./../../assets/icons/pousada.eot?uezvug#iefix') format('embedded-opentype'),
+         url('./../../assets/icons/pousada.ttf?uezvug') format('truetype'),
+         url('./../../assets/icons/pousada.woff?uezvug') format('woff'),
+         url('./../../assets/icons/pousada.svg?uezvug#remoto-icons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
+@icon-bebida: "\e91e";
+@icon-cafe: "\e91f";
+@icon-cigarro: "\e920";
+@icon-comida: "\e921";
+@icon-info: "\e922";
 @icon-foto: "\e91d";
 @icon-periodo: "\e91b";
 @icon-pernoite: "\e91c";
