--- a/dev/less/_menu-rodape.less
+++ b/dev/less/_menu-rodape.less
@@ -17,10 +17,11 @@
 			> li {
 				> a {
 					.box-sizing;
+					width: 16%;
 					color: @cor-principal;
 					float: left;
-					font-size: 9px;
-					padding: 0 5px;
+					font-size: 8px;
+					padding: 5px 0;
 					text-align: center;
 
 					&.ativo {
@@ -28,11 +29,10 @@
 					}
 
 					.mobile({
-						width: 20%;
-						font-size: 10px;
+						font-size: 12px;
 					});
 					.tablet({
-						font-size: 12px;
+						font-size: 14px;
 					});
 				}
 			}
