--- a/dev/less/_suites-pousada.less
+++ b/dev/less/_suites-pousada.less
@@ -105,81 +105,81 @@
           background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-rubi-duplex-17.jpg");
         }
         &.rubi-duplex-18 {
-          background-image: url("../../assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-rubi-duplex-18.jpg");
         }
         &.rubi,
         &.rubi-34 {
           background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-rubi-34.jpg");
         }
         &.rubi-35 {
-          background-image: url("../../assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-rubi-35.jpg");
         }
         &.esmeralda,
         &.esmeralda-24 {
           background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-esmeralda-24.jpg");
         }
         &.esmeralda-25 {
-          background-image: url("../../assets/images/suites/Esmeralda/Suíte-25/Foto-suíte-25-esmeralda-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-esmeralda-25.jpg");
         }
         &.perola,
         &.perola-20 {
           background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-perola-20.jpg");
         }
         &.perola-15 {
-          background-image: url("../../assets/images/suites/Perola/Suíte-15/foto-suíte-15-perola-vintage-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-perola-15.jpg");
         }
         &.perola-19 {
-          background-image: url("../../assets/images/suites/Perola/Suíte-19/foto-suíte-19-perola-vintage-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-perola-19.jpg");
         }
         &.diamante,
         &.diamante-11 {
           background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-11.jpg");
         }
         &.diamante-13 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-13/Foto-suíte-13-diamanete-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-13.jpg");
         }
         &.diamante-14 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-14/Foto-suíte-14-diamanete-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-14.jpg");
         }
         &.diamante-16 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-16/Foto-suíte-16-diamanete-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-16.jpg");
         }
         &.diamante-21 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-21/foto-suíte-21-diamanete-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-21.jpg");
         }
         &.diamante-23 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-23/Foto-suíte-23-diamanete-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-23.jpg");
         }
         &.diamante-12 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-12/Foto-suíte-12-diamanete-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-12.jpg.jpg");
         }
         &.diamante-22 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-22/Foto-suíte-22-diamanete-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-22.jpg");
         }
         &.diamante-26 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-26/Foto-suíte-26-diamanete-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-26.jpg");
         }
         &.diamante-28 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-28/foto-suite-28-diamante-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-28.jpg");
         }
         &.diamante-29 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-29/foto-suite-29-diamante-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-29.jpg");
         }
         &.diamante-30 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-30/foto-suite-30-diamante-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-30.jpg");
         }
         &.diamante-31 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-31/foto-suite-31-diamante-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-31.jpg");
         }
         &.diamante-27 {
-          background-image: url("../../assets/images/suites/Diamante/Suíte-27/foto-suite-27-diamante-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-diamante-27.jpg");
         }
         &.ouro,
         &.ouro-33 {
           background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-ouro-33.jpg");
         }
         &.ouro-32 {
-          background-image: url("../../assets/images/suites/Ouro/Suíte-32/Foto-suíte-32-ouro-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-ouro-32.jpg");
         }
         &.prata {
           background-image: url("../../assets/images/suites/panoramicas/foto-panoramica-suite-prata-08.jpg");
@@ -275,9 +275,6 @@
                 &.pernoite {
                   .icon(@icon-pernoite, 12px);
                 }
-                &.descricao {
-                  .icon(@icon-coracao, 12px);
-                }
               }
             }
             > p {
@@ -306,6 +303,15 @@
               }
             }
             > ul {
+              text-align: left;
+              padding: 10px;
+              background: #222;
+              border-radius: 5px;
+
+              .desktop({
+                padding: 20px;
+              });
+
               li {
                 line-height: 150%;
               }
