--- a/assets/less/ambience/_icons.less
+++ b/assets/less/ambience/_icons.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('./../../public/icon/icomoon.eot?g7o6wc');
-  src:  url('./../../public/icon/icomoon.eot?g7o6wc#iefix') format('embedded-opentype'),
-    url('./../../public/icon/icomoon.ttf?g7o6wc') format('truetype'),
-    url('./../../public/icon/icomoon.woff?g7o6wc') format('woff'),
-    url('./../../public/icon/icomoon.svg?g7o6wc#icomoon') format('svg');
+  src:  url('../icon/icomoon.eot?g7o6wc');
+  src:  url('../icon/icomoon.eot?g7o6wc#iefix') format('embedded-opentype'),
+    url('../icon/icomoon.ttf?g7o6wc') format('truetype'),
+    url('../icon/icomoon.woff?g7o6wc') format('woff'),
+    url('../icon/icomoon.svg?g7o6wc#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
